# oop_tasks

./: README.md  task_1.cpp
oop1/: oop1.cpp
oop2/: CMakeLists.txt  functions.cpp  functions.h  oop2.cpp  tests.cpp
oop3/: CMakeLists.txt  functions.cpp  functions.h  oop3.cpp  tests.cpp
oop4/: CMakeLists.txt  functions4.cpp  functions4.h  oop4.cpp
oop5/: oop5.cpp
oop6/: CMakeLists.txt  functions.cpp  functions.h  oop6.cpp  tests.cpp
